Notebooks analysing models with dropout and lr moditfications

--- a/notebooks/Analyse alexnet_extra_layer_dropouts models.ipynb
+++ b/notebooks/Analyse alexnet_extra_layer_dropouts models.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When training the models, we saved both files from the best and most recent epoch. First plot the most recent file, to see the evolution of parameters."
+    "When training the models, we saved both files from the best and most recent epoch."
    ]
   },
   {
@@ -1175,7 +1175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -1201,12 +1201,12 @@
       "    Batch 7 of 8\n",
       "    Batch 8 of 8\n",
       "Collapsing predictions...\n",
-      "Log loss: 1.05993083003\n"
+      "Log loss: 0.886345365813\n"
      ]
     }
    ],
    "source": [
-    "%run check_test_score.py -v run_settings/alexnet_extra_layer_dropouts.json"
+    "%run check_test_score.py -v run_settings/alexnet_extra_layer_dropouts2.json"
    ]
   }
  ],
