--- a/notebooks/Attributes investigation.ipynb
+++ b/notebooks/Attributes investigation.ipynb
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -217,7 +217,7 @@
        "(1, 130400, 2)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -239,7 +239,7 @@
        "array([[ 21.,  31.]])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,14 +249,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "Unrelated"
+    "### Use all the attributes"
    ]
   },
   {
@@ -267,18 +263,7 @@
    },
    "outputs": [],
    "source": [
-    "neukrill_net.highlevelfeatures.loadimage(X[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "skimage.feature.greycomatrix(neukrill_net.highlevelfeatures.loadimage(X[0]), distances"
+    "hlf = neukrill_net.highlevelfeatures.BasicAttributes(attrlst)"
    ]
   }
  ],
