--- a/notebooks/Analyse alexnet_based_extra_convlayer model.ipynb
+++ b/notebooks/Analyse alexnet_based_extra_convlayer model.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 57,
    "metadata": {
     "collapsed": true
    },
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 58,
    "metadata": {
     "collapsed": false
    },
@@ -107,7 +107,7 @@
        "Curve.Curve.valid_objective   (y)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 59,
    "metadata": {
     "collapsed": false
    },
@@ -127,10 +127,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7ffd4dbf1a50>]"
+       "[<matplotlib.lines.Line2D at 0x7ffd4d6cc6d0>]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -435,7 +435,7 @@
        "QmCC\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x7ffd4e5ace90>"
+       "<matplotlib.figure.Figure at 0x7ffd4d754fd0>"
       ]
      },
      "metadata": {},
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 60,
    "metadata": {
     "collapsed": false
    },
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 61,
    "metadata": {
     "collapsed": false
    },
@@ -487,7 +487,7 @@
        "      I : Curve.Train_y_nll   (y)"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -557,6 +557,50 @@
    ],
    "source": [
     "make_curves(m,\"valid_y_nll\",\"valid_objective\",\"train_y_nll\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16.666666666666668"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "4000000./(8*30000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "112"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "7*16"
    ]
   },
   {
