--- a/notebooks/Transformer Dataset.ipynb
+++ b/notebooks/Transformer Dataset.ipynb
@@ -38,7 +38,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x7f84088082d0>"
+       "<matplotlib.figure.Figure at 0x7fe5d86782d0>"
       ]
      },
      "metadata": {},
@@ -47,7 +47,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x7f8408808c90>"
+       "<matplotlib.figure.Figure at 0x7fe5d8678c90>"
       ]
      },
      "metadata": {},
@@ -56,7 +56,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x7f8408808a90>"
+       "<matplotlib.figure.Figure at 0x7fe5d8678a90>"
       ]
      },
      "metadata": {},
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -438,7 +438,7 @@
        "<module 'neukrill_net.augment' from '/afs/inf.ed.ac.uk/user/s08/s0805516/repos/neukrill-net-tools/neukrill_net/augment.pyc'>"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -457,10 +457,10 @@
     {
      "data": {
       "text/plain": [
-       "<module 'neukrill_net.blocks' from '/afs/inf.ed.ac.uk/user/s08/s0805516/repos/neukrill-net-tools/neukrill_net/blocks.py'>"
+       "<module 'neukrill_net.blocks' from '/afs/inf.ed.ac.uk/user/s08/s0805516/repos/neukrill-net-tools/neukrill_net/blocks.pyc'>"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 109,
    "metadata": {
     "collapsed": true
    },
@@ -763,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 110,
    "metadata": {
     "collapsed": true
    },
@@ -1348,6 +1348,361 @@
    "metadata": {},
    "source": [
     "Ran the model (many times) updating the code until it would work. Now the above YAML will train."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Bugs?\n",
+    "===\n",
+    "\n",
+    "We might have bugs in the ListDataset as when running it with _the same_ augmentations as used in the traditional methods we don't see anywhere near the same performance increases. In fact, it was barely able to learn at all, so it's probably broken somehow. As it can't learn at all, it might be garbling the Images, producing batches that don't correspond to the targets.\n",
+    "\n",
+    "The following code checks that we don't have problems with our random number generators:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import neukrill_net.image_directory_dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "fn = neukrill_net.augment.RandomAugment(**{\"units\":\"float64\",\n",
+    "                                           \"rotate\":[0,90,180,270],\n",
+    "                                           \"flip\":1,\n",
+    "                                           \"rotate_is_resizable\":0,\n",
+    "                                           \"normalise\":{\"global_or_pixel\":\"global\",\n",
+    "                                \"mu\":0.95727,\"sigma\":0.1423},\n",
+    "                                           \"resize\":(48,48)\n",
+    "                                           })\n",
+    "fn2 = neukrill_net.augment.RandomAugment(**{\"units\":\"float64\",\n",
+    "                                           \"rotate\":[0,90,180,270],\n",
+    "                                           \"flip\":1,\n",
+    "                                           \"rotate_is_resizable\":0,\n",
+    "                                           \"normalise\":{\"global_or_pixel\":\"global\",\n",
+    "                                \"mu\":0.95727,\"sigma\":0.1423},\n",
+    "                                           \"resize\":(48,48)\n",
+    "                                           })"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "dataset = neukrill_net.image_directory_dataset.ListDataset(fn, force=True)\n",
+    "dataset2 = neukrill_net.image_directory_dataset.ListDataset(fn2, force=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "iterator = dataset.iterator(batch_size=128)\n",
+    "iterator2 = dataset2.iterator(batch_size=128)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "for a,b in zip(iterator,iterator2):\n",
+    "    if (not np.allclose(a[0],b[0]) or not np.allclose(a[1],b[1])):\n",
+    "        print(\"Shit.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "not np.allclose(a[0],b[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "not np.allclose(a[0],b[0]) or not np.allclose(a[1],b[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Checking Against Dense\n",
+    "-------------------\n",
+    "\n",
+    "The DensePNGDataset doesn't appear to have the problems we're seeing with the ListDataset. If we load the _exact same processing_ in both and iterate over the minibatches sequentially we should see _exactly the same_ minibatches being produced."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'neukrill_net.image_directory_dataset' from '/afs/inf.ed.ac.uk/user/s08/s0805516/repos/neukrill-net-tools/neukrill_net/image_directory_dataset.py'>"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reload(neukrill_net.image_directory_dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "dense = neukrill_net.dense_dataset.DensePNGDataset(\n",
+    "                            run_settings=run_settings['run_settings_path'],\n",
+    "                                        force=True, verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/afs/inf.ed.ac.uk/user/s08/s0805516/repos/neukrill-net-work/run_settings/alexnet_based.json'"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "run_settings['run_settings_path']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "fn = neukrill_net.augment.RandomAugment(**{\"units\":\"float64\",\n",
+    "                                           \"normalise\":{\"global_or_pixel\":\"global\",\n",
+    "                                                \"mu\":0.95727,\"sigma\":0.1423},\n",
+    "                                           \"resize\":(48,48)})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "lists = neukrill_net.image_directory_dataset.ListDataset(fn,\n",
+    "                    run_settings_path=run_settings['run_settings_path'], force=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input shape: (48, 48)\n",
+      "Detector space: (41, 41)\n",
+      "Output space: (21, 21)\n",
+      "Input shape: (21, 21)\n",
+      "Detector space: (17, 17)\n",
+      "Output space: (9, 9)\n",
+      "Input shape: (9, 9)\n",
+      "Detector space: (11, 11)\n",
+      "Output space: (11, 11)\n",
+      "Input shape: (11, 11)\n",
+      "Detector space: (13, 13)\n",
+      "Output space: (7, 7)\n"
+     ]
+    }
+   ],
+   "source": [
+    "run_settings = neukrill_net.utils.load_run_settings(\n",
+    "            \"run_settings/alexnet_based_runtest.json\",settings,\n",
+    "                                                   force=True)\n",
+    "ystring = neukrill_net.utils.format_yaml(run_settings,settings)\n",
+    "train = pylearn2.config.yaml_parse.load(ystring)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "data_specs = train.algorithm.cost.get_data_specs(train.model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "mapping = DataSpecsMapping(data_specs)\n",
+    "space_tuple = mapping.flatten(data_specs[0], return_tuple=True)\n",
+    "source_tuple =  mapping.flatten(data_specs[1], return_tuple=True)\n",
+    "flat_data_specs = (CompositeSpace(space_tuple), source_tuple)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "dense_iterator = dense.iterator(mode='even_sequential',batch_size=128,\n",
+    "                                data_specs=flat_data_specs,return_tuple=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "list_iterator = lists.iterator(mode='sequential',batch_size=128)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "a = dense_iterator.next()\n",
+    "b = list_iterator.next()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "((1, 48, 48, 128), (128, 121))\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a[0].shape,a[1].shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "((128, 48, 48, 1), (128, 121))\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(b[0].shape,b[1].shape)"
    ]
   }
  ],
