--- a/notebooks/Transformer Dataset.ipynb
+++ b/notebooks/Transformer Dataset.ipynb
@@ -1704,6 +1704,13 @@
    "source": [
     "print(b[0].shape,b[1].shape)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Recent tests indicate __it is working after all__, so I'm neglecting these tests."
+   ]
   }
  ],
  "metadata": {
