--- a/notebooks/Validation scoring.ipynb
+++ b/notebooks/Validation scoring.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -40,7 +40,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x7f45b08d2090>"
+       "<matplotlib.figure.Figure at 0x7fe781590a50>"
       ]
      },
      "metadata": {},
@@ -49,7 +49,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x7f45b08d27d0>"
+       "<matplotlib.figure.Figure at 0x7fe781531150>"
       ]
      },
      "metadata": {},
@@ -58,7 +58,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x7f45b08d25d0>"
+       "<matplotlib.figure.Figure at 0x7fe781590f10>"
       ]
      },
      "metadata": {},
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -103,13 +103,13 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "settings = neukrill_net.utils.Settings(\"settings.json\")\n",
     "run_settings = neukrill_net.utils.load_run_settings(\n",
-    "    \"run_settings/alexnet_based_norm_global_8aug.json\", settings, force=True)"
+    "    \"run_settings/alexne\", settings, force=True)"
    ]
   },
   {
@@ -126,11 +126,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-8-04c0ad1ee192>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      3\u001b[0m                                             \u001b[0mrun_settings\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mrun_settings\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'run_settings_path'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m                                                      \u001b[0mtrain_or_predict\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'train'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m                                                      training_set_mode='validation', force=True)\n\u001b[0m",
+      "\u001b[1;32m/afs/inf.ed.ac.uk/user/s08/s0805516/repos/neukrill-net-tools/neukrill_net/dense_dataset.pyc\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, settings_path, run_settings, training_set_mode, train_or_predict, verbose, force)\u001b[0m\n\u001b[0;32m    100\u001b[0m                     \u001b[0mimage\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mskimage\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mio\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mimread\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimage_path\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    101\u001b[0m                     \u001b[1;31m# apply processing function (get back multiple images)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 102\u001b[1;33m                     \u001b[0mimages\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mprocessing\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimage\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    103\u001b[0m                     \u001b[1;31m# for each image store a class label\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    104\u001b[0m                     \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrun_settings\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"use_super_classes\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m/afs/inf.ed.ac.uk/user/s08/s0805516/repos/neukrill-net-tools/neukrill_net/augment.pyc\u001b[0m in \u001b[0;36m<lambda>\u001b[1;34m(image)\u001b[0m\n\u001b[0;32m    165\u001b[0m                                                             landscapise(\n\u001b[0;32m    166\u001b[0m                                                                 unitconvert(\n\u001b[1;32m--> 167\u001b[1;33m                                                                     \u001b[1;33m[\u001b[0m \u001b[0mimage\u001b[0m \u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    168\u001b[0m                                                                 )\n\u001b[0;32m    169\u001b[0m                                                             )\n",
+      "\u001b[1;32m/afs/inf.ed.ac.uk/user/s08/s0805516/repos/neukrill-net-tools/neukrill_net/augment.pyc\u001b[0m in \u001b[0;36m<lambda>\u001b[1;34m(images)\u001b[0m\n\u001b[0;32m     62\u001b[0m                                     \u001b[0maugment_settings\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'resize'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     63\u001b[0m                                     augment_settings['resize_order'])\n\u001b[1;32m---> 64\u001b[1;33m                                     for image in images]\n\u001b[0m\u001b[0;32m     65\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     66\u001b[0m         \u001b[0mresize\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mlambda\u001b[0m \u001b[0mimages\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mimages\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m/afs/inf.ed.ac.uk/user/s08/s0805516/repos/neukrill-net-tools/neukrill_net/image_processing.pyc\u001b[0m in \u001b[0;36mresize_image\u001b[1;34m(image, size, order)\u001b[0m\n\u001b[0;32m    285\u001b[0m     \u001b[1;31m# Now resize to specified size\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    286\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0morder\u001b[0m\u001b[1;33m>\u001b[0m\u001b[1;36m0\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0morder\u001b[0m\u001b[1;33m<\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 287\u001b[1;33m         image = (order * skimage.transform.resize(image, size, cval=whiteVal, order=1) +\n\u001b[0m\u001b[0;32m    288\u001b[0m                             (1-order) * skimage.transform.resize(image, size, cval=whiteVal, order=0) )\n\u001b[0;32m    289\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m/afs/inf.ed.ac.uk/user/s08/s0805516/repos/neukrill_venv2/lib/python2.7/site-packages/skimage/transform/_warps.pyc\u001b[0m in \u001b[0;36mresize\u001b[1;34m(image, output_shape, order, mode, cval)\u001b[0m\n\u001b[0;32m     88\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     89\u001b[0m         out = warp(image, tform, output_shape=output_shape, order=order,\n\u001b[1;32m---> 90\u001b[1;33m                    mode=mode, cval=cval)\n\u001b[0m\u001b[0;32m     91\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     92\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mout\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m/afs/inf.ed.ac.uk/user/s08/s0805516/repos/neukrill_venv2/lib/python2.7/site-packages/skimage/transform/_geometric.pyc\u001b[0m in \u001b[0;36mwarp\u001b[1;34m(image, inverse_map, map_args, output_shape, order, mode, cval, reverse_map)\u001b[0m\n\u001b[0;32m   1113\u001b[0m                 dims.append(_warp_fast(image[..., dim], matrix,\n\u001b[0;32m   1114\u001b[0m                                        \u001b[0moutput_shape\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0moutput_shape\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1115\u001b[1;33m                                        order=order, mode=mode, cval=cval))\n\u001b[0m\u001b[0;32m   1116\u001b[0m             \u001b[0mout\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdstack\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdims\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1117\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0morig_ndim\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m_warps_cy.pyx\u001b[0m in \u001b[0;36mskimage.transform._warps_cy._warp_fast (skimage/transform/_warps_cy.c:2521)\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32m/afs/inf.ed.ac.uk/user/s08/s0805516/repos/neukrill_venv2/lib/python2.7/site-packages/numpy/core/numeric.pyc\u001b[0m in \u001b[0;36masarray\u001b[1;34m(a, dtype, order)\u001b[0m\n\u001b[0;32m    392\u001b[0m \u001b[0meinsum\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmultiarray\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0meinsum\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    393\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 394\u001b[1;33m \u001b[1;32mdef\u001b[0m \u001b[0masarray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mNone\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0morder\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mNone\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    395\u001b[0m     \"\"\"\n\u001b[0;32m    396\u001b[0m     \u001b[0mConvert\u001b[0m \u001b[0mthe\u001b[0m \u001b[0minput\u001b[0m \u001b[0mto\u001b[0m \u001b[0man\u001b[0m \u001b[0marray\u001b[0m\u001b[1;33m.\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "# loading the data\n",
     "dataset = neukrill_net.dense_dataset.DensePNGDataset(settings_path=run_settings['settings_path'],\n",
@@ -3838,6 +3858,16 @@
     "            dataset.X[k[0]*8:(k[0]*8)+1,:]).squeeze()\n",
     "        channels += hl.Image(example, group=k[1])\n",
     "channels"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Log loss versus original size\n",
+    "===========\n",
+    "\n",
+    "\n"
    ]
   }
  ],
