--- a/notebooks/Analysing no norms.ipynb
+++ b/notebooks/Analysing no norms.ipynb
@@ -98,7 +98,7 @@
     "def make_curves(model, *args):\n",
     "    curves = None\n",
     "    for c in args:\n",
-    "        channel = m.monitor.channels[c]\n",
+    "        channel = model.monitor.channels[c]\n",
     "        c = c[0].upper() + c[1:]\n",
     "        if not curves:\n",
     "            curves = hl.Curve(zip(channel.example_record,channel.val_record),group=c)\n",
