--- a/notebooks/Testing Normalisation.ipynb
+++ b/notebooks/Testing Normalisation.ipynb
@@ -38,16 +38,17 @@
       "holoviews==0.7\r\n",
       "ipython==3.0.0-rc1\r\n",
       "jsonschema==2.4.0\r\n",
+      "mahotas==1.2.4\r\n",
       "matplotlib==1.4.3\r\n",
       "mistune==0.5\r\n",
       "mock==1.0.1\r\n",
-      "-e git+git@github.com:Neuroglycerin/neukrill-net-tools.git@a4798830b4ca815178903ca371c5215e8bdba4b7#egg=neukrill_net-dev\r\n",
+      "-e git+git@github.com:Neuroglycerin/neukrill-net-tools.git@aa940cf57a38e8cd25fe84c9dfb5505112089c10#egg=neukrill_net-dev\r\n",
       "nose==1.3.4\r\n",
       "numpy==1.9.1\r\n",
       "param==1.2.1\r\n",
       "ptyprocess==0.4\r\n",
       "py==1.4.26\r\n",
-      "-e git+git@github.com:lisa-lab/pylearn2.git@9a04142875779077b1c276c3e5db7de8c8257773#egg=pylearn2-dev\r\n",
+      "-e git+https://github.com/lisa-lab/pylearn2.git@cf3999e7183f8dcaccccf4dfd2a31bbe3a948a97#egg=pylearn2-dev\r\n",
       "pyparsing==2.0.3\r\n",
       "pytest==2.6.4\r\n",
       "python-dateutil==2.4.0\r\n",
@@ -57,7 +58,7 @@
       "scikit-learn==0.15.2\r\n",
       "scipy==0.14.0\r\n",
       "six==1.8.0\r\n",
-      "terminado==0.4\r\n",
+      "terminado==0.5\r\n",
       "tornado==4.1\r\n",
       "wsgiref==0.1.2\r\n"
      ]
@@ -85,7 +86,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/afs/inf.ed.ac.uk/user/s08/s0805516/repos/neukrill-net-work\n"
+      "/afs/inf.ed.ac.uk/user/s11/s1145806/Documents/git/neukrill-net-work\n"
      ]
     }
    ],
@@ -160,32 +161,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Thu Feb 26 00:40:54 2015       \n",
-      "+------------------------------------------------------+                       \n",
-      "| NVIDIA-SMI 340.24     Driver Version: 340.24         |                       \n",
-      "|-------------------------------+----------------------+----------------------+\n",
-      "| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
-      "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\n",
-      "|===============================+======================+======================|\n",
-      "|   0  Tesla K40c          Off  | 0000:02:00.0     Off |                    0 |\n",
-      "| 26%   49C    P8    20W / 235W |     23MiB / 11519MiB |      0%      Default |\n",
-      "+-------------------------------+----------------------+----------------------+\n",
-      "|   1  Tesla K40c          Off  | 0000:04:00.0     Off |                    0 |\n",
-      "| 26%   52C    P0    62W / 235W |    145MiB / 11519MiB |      0%      Default |\n",
-      "+-------------------------------+----------------------+----------------------+\n",
-      "|   2  Tesla K40c          Off  | 0000:83:00.0     Off |                    0 |\n",
-      "| 23%   30C    P8    20W / 235W |     23MiB / 11519MiB |      0%      Default |\n",
-      "+-------------------------------+----------------------+----------------------+\n",
-      "|   3  Tesla K40c          Off  | 0000:84:00.0     Off |                    0 |\n",
-      "| 23%   26C    P8    18W / 235W |     23MiB / 11519MiB |      0%      Default |\n",
-      "+-------------------------------+----------------------+----------------------+\n",
-      "                                                                               \n",
-      "+-----------------------------------------------------------------------------+\n",
-      "| Compute processes:                                               GPU Memory |\n",
-      "|  GPU       PID  Process name                                     Usage      |\n",
-      "|=============================================================================|\n",
-      "|    1     81884  python                                               120MiB |\n",
-      "+-----------------------------------------------------------------------------+\n"
+      "Thu Feb 26 18:12:14 2015       \r\n",
+      "+------------------------------------------------------+                       \r\n",
+      "| NVIDIA-SMI 340.24     Driver Version: 340.24         |                       \r\n",
+      "|-------------------------------+----------------------+----------------------+\r\n",
+      "| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |\r\n",
+      "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\r\n",
+      "|===============================+======================+======================|\r\n",
+      "|   0  Tesla K40c          Off  | 0000:02:00.0     Off |                    0 |\r\n",
+      "| 26%   51C    P0    62W / 235W |    113MiB / 11519MiB |      0%      Default |\r\n",
+      "+-------------------------------+----------------------+----------------------+\r\n",
+      "|   1  Tesla K40c          Off  | 0000:04:00.0     Off |                    0 |\r\n",
+      "| 26%   51C    P0    62W / 235W |    145MiB / 11519MiB |      0%      Default |\r\n",
+      "+-------------------------------+----------------------+----------------------+\r\n",
+      "|   2  Tesla K40c          Off  | 0000:83:00.0     Off |                    0 |\r\n",
+      "| 23%   30C    P8    20W / 235W |     23MiB / 11519MiB |      0%      Default |\r\n",
+      "+-------------------------------+----------------------+----------------------+\r\n",
+      "|   3  Tesla K40c          Off  | 0000:84:00.0     Off |                    0 |\r\n",
+      "| 23%   26C    P8    18W / 235W |     23MiB / 11519MiB |      0%      Default |\r\n",
+      "+-------------------------------+----------------------+----------------------+\r\n",
+      "                                                                               \r\n",
+      "+-----------------------------------------------------------------------------+\r\n",
+      "| Compute processes:                                               GPU Memory |\r\n",
+      "|  GPU       PID  Process name                                     Usage      |\r\n",
+      "|=============================================================================|\r\n",
+      "|    0     31158  ...s08/s0805516/repos/neukrill_venv2/bin/python2.7    88MiB |\r\n",
+      "|    1     81884  python                                               120MiB |\r\n",
+      "+-----------------------------------------------------------------------------+\r\n"
      ]
     }
    ],
