--- a/notebooks/Threshold Adjacency Stats.ipynb
+++ b/notebooks/Threshold Adjacency Stats.ipynb
@@ -783,7 +783,9 @@
    },
    "outputs": [],
    "source": [
-    "XF = hlf.transform(X)"
+    "t0 = time.time()\n",
+    "XF = hlf.transform(X)\n",
+    "print(\"Computing features took {}\".format(time.time()-t0))"
    ]
   },
   {
