--- a/notebooks/Leaderboard plot.ipynb
+++ b/notebooks/Leaderboard plot.ipynb
@@ -1833,7 +1833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 65,
    "metadata": {
     "collapsed": false
    },
@@ -2227,7 +2227,7 @@
        "AElFTkSuQmCC\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x7fc02d910150>"
+       "<matplotlib.figure.Figure at 0x7fc02d9f6350>"
       ]
      },
      "metadata": {},
@@ -2257,7 +2257,7 @@
     "\n",
     "plt.grid(True)\n",
     "\n",
-    "plt.savefig(\"leaderboard_sb.png\", bbox_inches='tight')"
+    "plt.savefig(\"leaderboard_sb.svg\", bbox_inches='tight')"
    ]
   }
  ],
